tests/toy/neg/000811_mutation.toylang
program a = { a = var a); } .
